Add ssl configuration for api

--- a/highcore/roles/api/templates/webserver/vhost.j2
+++ b/highcore/roles/api/templates/webserver/vhost.j2
@@ -1,8 +1,9 @@
 # {{ ansible_managed }}
 
 server {
-    listen 80;
-
+    listen 443 ssl;
+    ssl_certificate     /etc/letsencrypt/live/{{ api_domain }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ api_domain }}/privkey.pem;
     root            {{ webserver_root }};
 
 {% if webserver_basic_auth != '' %}
